--- a/index.html
+++ b/index.html
@@ -75,28 +75,31 @@
 
           <div class="images">
             <img
-              src="c:\Users\alvin\Documents\New folder\8flowers.JPG"
+              src="https://cdn.thefloristmarket.com/cdn/images/vendoritem/thefloristmarket-thinkofmeflorist-37125-48525_500x500.jpeg"
               alt=""
             />
-            <img src="c:\Users\alvin\Documents\New folder\rose1.JPG" alt="" />
             <img
-              src="c:\Users\alvin\Documents\New folder\100flowers.jpg"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6b6rTizPFGdSnm8JHEzr-60gGFX1dMmmQqA&s"
+              alt=""
+            />
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDjtBfNWnss2yb22uoYbtj_yebfrqLr33Faw&s"
               alt=""
             />
           </div>
           <div class="images2">
             <img
-              src="c:\Users\alvin\Documents\New folder\PHOTO-2025-09-21-12-56-46.jpg"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
               alt=""
             />
             <img
-              src="c:\Users\alvin\Documents\New folder\PHOTO-2025-09-21-12-48-36.jpg"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS22iGpKrFe8QqK-DgGEyqyFFi0xwSC6ZrauQ&s"
               alt=""
             />
           </div>
           <div class="packet-img">
             <img
-              src="c:\Users\alvin\Documents\New folder\IMG_2672.jpg"
+              src="https://png.pngtree.com/png-clipart/20240227/original/pngtree-valentines-day-red-theme-with-flower-gift-packet-in-the-corner-png-image_14434388.png"
               alt=""
             />
           </div>
