--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container_logo">
           <img
             class="logo"
-            src="c:\Users\alvin\Documents\New folder\logo.JPG"
+            src="images/logo.jpg"
             alt="logo"
           />
         </div>
