--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container_logo">
           <img
             class="logo"
-            src="images/logo.jpg"
+            src="images/logo.JPG"
             alt="logo"
           />
         </div>
