--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             Bouquet 40 Roses : 120$ <br />
             Bouquet 50 Roses : 150$ <br />
             Bouquet 60 Roses : 180$ <br />
+            Bouquet 70 Roses : 210$ <br />
+            Bouquet 80 Roses : 240$ <br />
+            Bouquet 100 Roses : 300$ <br />
             Bouquet de fleure mixte : 60$ <br />
             bouquet de chocolat + 20 roses: 100$
           </div>
