Enhance index.html with Font Awesome and contact links
Added Font Awesome stylesheet and updated contact numbers with links. Simplified HTML structure for better readability.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Document</title>
     <style></style>
   </head>
@@ -11,44 +15,47 @@
     <div class="container">
       <div class="container1">
         <div class="container_logo">
-          <img
-            class="logo"
-            src="images/logo.JPG"
-            alt="logo"
-          />
+          <img class="logo" src="images/logo.JPG" alt="logo" />
         </div>
 
         <div class="contact">
           <h3 style="text-align: center; color: rgb(128, 61, 72)">
-            Contactez Nous
+            Contactez Nous <i class="fa fa-phone"></i>
           </h3>
           <p style="text-align: center; color: brown">
-            Numero de telephone : +243 976 203 805 <br />
-            Numero de telephone : +243 853 958 848 <br />
+            Numero de telephone :
+            <strong><a href="whatsapp.com">+243 976 203 805</a></strong>
+            <br />
+            Numero de telephone :
+            <strong> <a href="whatsapp.com">+243 853 958 848</a></strong>
+            <br />
             localisation : Kinshasa, ngaliema , kin marche GB <br />
           </p>
         </div>
       </div>
       <div class="container2">
+        <div class="images">
+          <img
+            src="https://raw.githubusercontent.com/Karimlw1/everything-with-html-css/main/images/download.jpg"
+            alt=""
+          />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6b6rTizPFGdSnm8JHEzr-60gGFX1dMmmQqA&s"
+            alt=""
+          />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDjtBfNWnss2yb22uoYbtj_yebfrqLr33Faw&s"
+            alt=""
+          />
+        </div>
         <div class="tarif">
-          <h1
-            style="
-              text-align: center;
-              text-decoration: underline;
-              font-family: 'Courier New', Courier, monospace;
-              color: rgb(138, 0, 23);
-              font-size: 40px;
-            "
-          >
-            TARIF BOUQUET
-          </h1>
+          <h1>TARIF BOUQUET</h1>
 
           <div class="bouquets">
             <strong style="color: rgb(128, 61, 72)">1 Rose: 3$</strong> <br />
             <h2 style="color: brown; text-decoration: underline">
               <strong>BOUQUET</strong>
             </h2>
-          
             Bouquet 10 Roses &nbsp;&nbsp;: 40$ <br />
             Bouquet 20 Roses &nbsp;&nbsp;: 80$ <br />
             Bouquet 30 Roses &nbsp;&nbsp;: 120$ <br />
@@ -59,47 +66,27 @@
             bouquet de chocolat + 20 roses: 110$
           </div>
           <div class="rose_mixte">
-            <h2>
-              <strong style="color: brown; text-decoration: underline"
-                >COFFRET & BOITTE</strong
-              >
-            </h2>
+            <h2>COFFRET & BOITTE</h2>
             Coffret en rose : 60$ <br />
             boite de 10 roses + chocolat : 60$ <br />
             boite de 20 roses + chocolat : 100$ <br />
             boite de 30 roses + chocolat : 150$ <br />
           </div>
+        </div>
+        <div class="images2">
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
+            alt=""
+          />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS22iGpKrFe8QqK-DgGEyqyFFi0xwSC6ZrauQ&s"
+            alt=""
+          />
 
-          <div class="images">
-            <img
-              src="https://cdn.thefloristmarket.com/cdn/images/vendoritem/thefloristmarket-thinkofmeflorist-37125-48525_500x500.jpeg"
-              alt=""
-            />
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6b6rTizPFGdSnm8JHEzr-60gGFX1dMmmQqA&s"
-              alt=""
-            />
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDjtBfNWnss2yb22uoYbtj_yebfrqLr33Faw&s"
-              alt=""
-            />
-          </div>
-          <div class="images2">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-              alt=""
-            />
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS22iGpKrFe8QqK-DgGEyqyFFi0xwSC6ZrauQ&s"
-              alt=""
-            />
-          </div>
-          <div class="packet-img">
-            <img
-              src="https://png.pngtree.com/png-clipart/20240227/original/pngtree-valentines-day-red-theme-with-flower-gift-packet-in-the-corner-png-image_14434388.png"
-              alt=""
-            />
-          </div>
+          <img
+            src="https://png.pngtree.com/png-clipart/20240227/original/pngtree-valentines-day-red-theme-with-flower-gift-packet-in-the-corner-png-image_14434388.png"
+            alt=""
+          />
         </div>
       </div>
     </div>
