Refactor bouquet and coffret pricing display
Updated bouquet and coffret pricing details with improved formatting.

--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
             <h2 style="color: brown; text-decoration: underline">
               <strong>BOUQUET</strong>
             </h2>
-            Bouquet 10 Roses &nbsp;&nbsp;: 40$ <br />
-            Bouquet 20 Roses &nbsp;&nbsp;: 80$ <br />
-            Bouquet 30 Roses &nbsp;&nbsp;: 120$ <br />
-            Bouquet 40 Roses : 160$ <br />
-            Bouquet 60 Roses : 200$ <br />
-            Bouquet 100 Roses : 300$ <br />
-            Bouquet de fleure mixte : 80$ <br />
-            bouquet de chocolat + 20 roses: 110$
+            10 Roses &nbsp;&nbsp;: 40$ <br />
+            20 Roses &nbsp;&nbsp;: 80$ <br />
+            30 Roses &nbsp;&nbsp;: 120$ <br />
+            40 Roses : 160$ <br />
+            60 Roses : 200$ <br />
+            100 Roses : 300$ <br />
+            fleure mixte : 80$ <br />
+            Bouqet de chocolat + 20 roses: 110$
           </div>
-          <div class="rose_mixte">
+          <div class="rose_mixte" style="display: block">
             <h2>COFFRET & BOITTE</h2>
-            Coffret en rose : 60$ <br />
-            boite de 10 roses + chocolat : 60$ <br />
-            boite de 20 roses + chocolat : 100$ <br />
-            boite de 30 roses + chocolat : 150$ <br />
+            Coffret en rose : <b>60$</b> <br />
+            boite de 10 roses + chocolat : <b>60$ </b> <br />
+            boite de 20 roses + chocolat : <b>100$</b> <br />
+            boite de 30 roses + chocolat : <b>150$</b> <br />
           </div>
         </div>
         <div class="images2">
