--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Document</title>
+    <title>Ecrin d'art d'almina</title>
     <style></style>
   </head>
   <body>
+
+
     <div class="container">
       <div class="container1">
         <div class="container_logo">
@@ -29,7 +31,8 @@
             Numero de telephone :
             <strong> <a href="whatsapp.com">+243 853 958 848</a></strong>
             <br />
-            localisation : Kinshasa, ngaliema , kin marche GB <br />
+            localisation <i class="fa fa-map-marker"></i> : Kinshasa, ngaliema ,
+            kin marche GB <br />
           </p>
         </div>
       </div>
