Revise welcome text and add navigation buttons
Updated welcome message and added header buttons.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
     <title>Ecrin d'art d'almina</title>
     <style></style>
   </head>
   <body>
+    <header>
+      <div>
+        <button>Habits</button>
+        <button>Tenues personnalisées</button>
+        <button>Cadeaux</button>
+      </div>
+    </header>
     <div class="welcome-box" id="welcome">
-      <h3>Welcome</h3>
-      <p>We sell flours and we can develop.</p>
+      <h3>Bienvenue Chez Nous</h3>
+      <p>
+        Notre maison réunit tout ce qui fait plaisir: des
+        <i>fleurs</i> fraîches, des <i>habits</i> soigneusement choisis, des
+        <i>tenues personnalisées</i> et des <i>cadeaux</i> qui marquent les
+        anniversaires. Ici, chaque détail compte, afin que vos intentions
+        deviennent des moments à offrir.
+      </p>
     </div>
 
     <div class="container">
