Change marker color for location in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Numero de telephone :
             <strong> <a href="whatsapp.com">+243 853 958 848</a></strong>
             <br />
-            localisation <i class="fa fa-map-marker"></i> : Kinshasa, ngaliema ,
+            localisation <i style="color: "green" class="fa fa-map-marker"></i> : Kinshasa, ngaliema ,
             kin marche GB <br />
           </p>
         </div>
