Update phone numbers to use WhatsApp links

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           </h3>
           <p style="text-align: center; color: brown">
             Numero de telephone :
-            <strong><a href="whatsapp.com">+243 976 203 805</a></strong>
+            <strong><a href="https://wa.me/243976203805">+243 976 203 805</a></strong>
             <br />
             Numero de telephone :
-            <strong> <a href="whatsapp.com">+243 853 958 848</a></strong>
+            <strong> <a href="https://wa.me/243853958848">+243 853 958 848</a></strong>
             <br />
             localisation <i style="color: "green" class="fa fa-map-marker"></i> : Kinshasa, ngaliema ,
             kin marche GB <br />
