adding scroll & behaviour

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div>
-        <button>Habits</button>
+        <button onclick="location.href='#welcome2'">Habits</button>
         <button>Tenues personnalisées</button>
         <button>Cadeaux</button>
       </div>
@@ -123,13 +123,13 @@
     </div>
     <section class="closthes">
       <div>
-
+        <img src="" alt="">
       </div>
       <div>
-
+        <img src="" alt="">
       </div>
       <div>
-        
+        <img src="" alt="">
       </div>
     </section>
 
