updating images and videos & their styles

--- a/index.html
+++ b/index.html
@@ -123,13 +123,17 @@
     </div>
     <section class="closthes">
       <div>
-        <img src="" alt="">
+        <img src="https://pin.it/6pnFO8Ocn" alt="long sleeve button-front casual shirt ">
       </div>
       <div>
-        <img src="" alt="">
+        <video autoplay muted loop playsinline>
+          <source src="https://pin.it/56W4p2fqp" type="video/mp4">
+        </video>
       </div>
       <div>
-        <img src="" alt="">
+        <video autoplay muted loop playsinline>
+          <source src="https://pin.it/4SDMj4dDe" type="video/mp4">
+        </video>
       </div>
     </section>
 
