section habit description

--- a/index.html
+++ b/index.html
@@ -112,13 +112,10 @@
     </div>
 
     <div class="welcome-box" id="welcome2">
-      <h3>Bienvenue Chez Nous</h3>
+      <h3>VENTE DES HABITS</h3>
       <p>
-        Notre maison réunit tout ce qui fait plaisir: des
-        <i>fleurs</i> fraîches, des <i>habits</i> soigneusement choisis, des
-        <i>tenues personnalisées</i> et des <i>cadeaux</i> qui marquent les
-        anniversaires. Ici, chaque détail compte, afin que vos intentions
-        deviennent des moments à offrir.
+       Découvrez nos vêtements tendance en ligne ! 
+        Commandez dès maintenant et recevez votre style unique directement chez vous en seulement <i>2 semaines</i> Livraison rapide et facile, pour un look qui fait sensation !
       </p>
     </div>
     <section class="closthes">
