--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
     </div>
     <section class="closthes">
       <div>
-        <img src="https://pin.it/6pnFO8Ocn" alt="long sleeve button-front casual shirt ">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="long sleeve button-front casual shirt ">
       </div>
       <div>
         <video autoplay muted loop playsinline>
-          <source src="https://pin.it/56W4p2fqp" type="video/mp4">
+          <source src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" type="video/mp4">
         </video>
       </div>
       <div>
         <video autoplay muted loop playsinline>
-          <source src="https://pin.it/4SDMj4dDe" type="video/mp4">
+          <source src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" type="video/mp4">
         </video>
       </div>
     </section>
