--- a/index.html
+++ b/index.html
@@ -123,14 +123,10 @@
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="long sleeve button-front casual shirt ">
       </div>
       <div>
-        <video autoplay muted loop playsinline>
-          <source src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" type="video/mp4">
-        </video>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="">
       </div>
       <div>
-        <video autoplay muted loop playsinline>
-          <source src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" type="video/mp4">
-        </video>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="">
       </div>
     </section>
 
