--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="long sleeve button-front casual shirt ">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="try">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="try">
       </div>
     </section>
 
