correcting images extention

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
     </div>
     <section class="closthes">
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="long sleeve button-front casual shirt ">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt ">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="try">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1" alt="try">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
       </div>
     </section>
 
