correction on duplications

--- a/index.html
+++ b/index.html
@@ -98,46 +98,6 @@
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
             alt=""
           />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
-           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZVx6uu5QZx5pJlYdorTRUBHAY6r61jSSD0A&s"
-            alt=""
-          />
           <img
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS22iGpKrFe8QqK-DgGEyqyFFi0xwSC6ZrauQ&s"
             alt=""
@@ -161,6 +121,39 @@
     <section class="closthes">
       <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt ">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+      </div>
+      <div>
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
       </div>
       <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
