Add flower section and discount buttons
Added a new section for flowers and discounts with images and buttons.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,23 @@
         </div>
       </div>
     </div>
-
+    <section class="NosFleurs">
+      <div class="fleur1>
+        <img src="" alt="fleur ...">
+      </div>
+      <div class="fleur2>
+        <img src="" alt="fleur ...">
+      </div>
+      <div class="fleur3>
+        <img src="" alt="fleur ...">
+      </div>
+      <div class="fleur4>
+        <img src="" alt="fleur ...">
+      </div>
+      <div class="fleur5>
+        <img src="" alt="fleur ...">
+      </div>
+    </section>
     <div class="welcome-box" id="welcome2">
       <h3>VENTE DES HABITS</h3>
       <p>
@@ -137,31 +153,27 @@
       <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
       </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+    </section>
+
+    <section class="discounts">
+      <div class="discount1">
+        £discount 1
+        <button onclick="location.href="discounted1"> SEE PRODUCT</button>
       </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+       <div class="discount2">
+        £discount 2
+        <button onclick="location.href="discounted1"> SEE PRODUCT</button>
       </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+       <div class="discount3">
+        £discount 3
+        <button onclick="location.href="discounted1"> SEE PRODUCT</button>
       </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
-      </div>
-      <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+       <div class="discount4">
+        £discount 4
+        <button onclick="location.href="discounted1"> SEE PRODUCT</button>
       </div>
     </section>
+    
 
     <script>
       window.addEventListener("load", () => {
