Insert placeholder text in flower sections
Added placeholder text 'hhhhhhhhh' to multiple flower divs.

--- a/index.html
+++ b/index.html
@@ -113,18 +113,23 @@
     <section class="NosFleurs">
       <div class="fleur1>
         <img src="" alt="fleur ...">
+        hhhhhhhhh
       </div>
       <div class="fleur2>
         <img src="" alt="fleur ...">
+        hhhhhhhhh
       </div>
       <div class="fleur3>
         <img src="" alt="fleur ...">
+        hhhhhhhhh
       </div>
       <div class="fleur4>
         <img src="" alt="fleur ...">
+        hhhhhhhhh
       </div>
       <div class="fleur5>
         <img src="" alt="fleur ...">
+        hhhhhhhhh
       </div>
     </section>
     <div class="welcome-box" id="welcome2">
