--- a/index.html
+++ b/index.html
@@ -20,16 +20,28 @@
         <button>Cadeaux</button>
       </div>
     </header>
-    <div class="welcome-box" id="welcome">
-      <h3 class="hero-title">Bienvenue Chez Nous</h3>
-      <p class="subtitle">
-        Notre maison réunit tout ce qui fait plaisir: des
-        <i>fleurs</i> fraîches, des <i>habits</i> soigneusement choisis, des
-        <i>tenues personnalisées</i> et des <i>cadeaux</i> qui marquent les
-        anniversaires. Ici, chaque détail compte, afin que vos intentions
-        deviennent des moments à offrir.
-      </p>
-    </div>
+    <section class="hero">
+  <div class="hero-content">
+    <h1>Ecrin d'art d'Almina</h1>
+    <p>Fleurs, habits personnalisés et cadeaux uniques pour marquer vos moments.</p>
+    <button class="cta">Commander maintenant</button>
+  </div>
+</section>
+
+<h2 class="section-title">Nos Fleurs</h2>
+<div class="cards-container">
+  <div class="card"></div>
+  <div class="card"></div>
+  <div class="card"></div>
+</div>
+
+<h2 class="section-title">Promotions</h2>
+<div class="cards-container">
+  <div class="card"></div>
+  <div class="card"></div>
+  <div class="card"></div>
+</div>
+
 
     <div class="container">
       <div class="container1">
