--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpg" alt="" id="discounted1">
   </div>
   <div class="card">
     <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpg" alt="">
@@ -165,19 +165,19 @@
     </div>
     <section class="closthes">
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt ">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="long sleeve button-front casual shirt " id="discount4"">
       </div>
       <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try" id="discounted2">
       </div>
       <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
       </div>
       <div>
-        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
+        <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try" id="discount3">
       </div>
       <div>
         <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/habit1.jpg" alt="try">
@@ -187,19 +187,19 @@
     <section class="discounts">
       <div class="discount1">
         £discount 1
-        <button onclick="location.href="discounted1"> SEE PRODUCT</button>
+        <button onclick="location.href="#discounted1"> SEE PRODUCT</button>
       </div>
        <div class="discount2">
         £discount 2
-        <button onclick="location.href="discounted1"> SEE PRODUCT</button>
+        <button onclick="location.href="#discounted2"> SEE PRODUCT</button>
       </div>
        <div class="discount3">
         £discount 3
-        <button onclick="location.href="discounted1"> SEE PRODUCT</button>
+        <button onclick="location.href="#discounted3"> SEE PRODUCT</button>
       </div>
        <div class="discount4">
         £discount 4
-        <button onclick="location.href="discounted1"> SEE PRODUCT</button>
+        <button onclick="location.href="#discounted4"> SEE PRODUCT</button>
       </div>
     </section>
     
