correcting the semicolumn

--- a/index.html
+++ b/index.html
@@ -185,21 +185,23 @@
     </section>
 
     <section class="discounts">
+
       <div class="discount1">
         £discount 1
-        <button onclick="location.href="#discounted1"> SEE PRODUCT</button>
+        <button onclick="location.href='#discounted1'"> SEE PRODUCT</button>
       </div>
+
        <div class="discount2">
         £discount 2
-        <button onclick="location.href="#discounted2"> SEE PRODUCT</button>
+        <button onclick="location.href='#discounted2'"> SEE PRODUCT</button>
       </div>
        <div class="discount3">
         £discount 3
-        <button onclick="location.href="#discounted3"> SEE PRODUCT</button>
+        <button onclick="location.href='#discounted3'"> SEE PRODUCT</button>
       </div>
        <div class="discount4">
         £discount 4
-        <button onclick="location.href="#discounted4"> SEE PRODUCT</button>
+        <button onclick="location.href='#discounted4'"> SEE PRODUCT</button>
       </div>
     </section>
     
