from jpg to jpeg

--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
 <h2 class="section-title">Nos Fleurs</h2>
 <div class="cards-container">
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpeg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/76ba4d02-ce6c-41aa-b8f4-0a01f0e9d11e.jpg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/76ba4d02-ce6c-41aa-b8f4-0a01f0e9d11e.jpeg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo5.jpg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo5.jpeg" alt="">
   </div>
 </div>
 
 <h2 class="section-title">Promotions</h2>
 <div class="cards-container">
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo4.jpeg" alt="">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpg" alt="" id="discounted1">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo3.jpeg" alt="" id="discounted1">
   </div>
   <div class="card">
-    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpg" alt="">
+    <img src="https://raw.githubusercontent.com/Karimlw1/alminaArt/main/images/photo2.jpeg" alt="">
   </div>
 </div>
 
